--- a/client/public/locales/en/translation.json
+++ b/client/public/locales/en/translation.json
@@ -5,8 +5,16 @@
             "title_2": "Browse thousands of skilled professionals ready to help you with any task, from web development to graphic design.",
             "cta": "Browse our professionals !"
         },
-        "featuredProfessionals": {},
-        "popularSkills": {},
-        "joinSection": {}
+        "featuredProfessionals": {
+            "title_1": "Featured Professionals"
+        },
+        "popularSkills": {
+            "title_1": "Popular Skills"
+        },
+        "joinSection": {
+            "title_1": "Join SkillHub as a Professional",
+            "p_1": "Offer your skills and connect with clients seeking your expertise.",
+            "b_1": "Browse our professionals !"
+        }
     }
 }
