--- a/client/public/locales/ar/translation.json
+++ b/client/public/locales/ar/translation.json
@@ -6,7 +6,24 @@
             "cta": "تصفح محترفينا!"
         },
         "featuredProfessionals": {
-            "title_1": "Featured Professionals"
+            "title_1": "Featured Professionals",
+            "professionals": [
+                {
+                    "name": "Oussama Benmansour",
+                    "role": "Software Engineer",
+                    "img": "https://nsvzogblporeptlk.public.blob.vercel-storage.com/user/image-NTACyQgrtJEfnWH6fqrQ63hWpt2118"
+                },
+                {
+                    "name": "Adel Benmansour",
+                    "role": "Psychologist",
+                    "img": "https://nsvzogblporeptlk.public.blob.vercel-storage.com/user/image-uwzsnDcO3Va6DAcFEq24CBVuJVkNHi"
+                },
+                {
+                    "name": "Nabil Djari",
+                    "role": "Translation specialist/Psychologist",
+                    "img": "https://lh3.googleusercontent.com/aida-public/AB6AXuCoydEavwCtjCyS7H8jfAibJ_4leGGWoqWdrzMPfNG8BsDEMdDhsHA-nCXfbv8wwb-oYP6C5M-caG5mUaL7KMOgaDvjUFYGuIz3-nRK8XI1zzp85MkzGaDzdzrk8Xzbp1GKmeQ-44kRRuB1xS33SbaD1smEAsMscBLLoNEzEU70k4lHxlPY65IRKA45k2R3FEZF3kM10HAYoZco2S8HeISTnQyB6KrxJbHTKnOyqDNgKpqTivMBvnI6zX-sWEPAUCJZIEfELX67PBm4"
+                }
+            ]
         },
         "popularSkills": {
             "title_1": "Popular Skills"
