Fixed all the issues i could find

--- a/client/public/locales/ar/translation.json
+++ b/client/public/locales/ar/translation.json
@@ -32,6 +32,12 @@
             "title_1": "انضم إلى Homease كمحترف",
             "p_1": "قدم مهاراتك وتواصل مع العملاء الذين يبحثون عن خبرتك.",
             "b_1": "تصفح محترفينا!"
+        },
+        "actionSection": {
+            "browseProfessionals": "تصفح المتخصصين",
+            "getStarted": "ابدأ الآن",
+            "postRequest": "انشر طلباً"
+
         }
     },
     "navbar": {
@@ -44,6 +50,7 @@
         },
         "actions": {
             "postRequest": "انشر طلباً",
+            "signup": "إنشاء حساب",
             "login": "تسجيل الدخول"
         }
     },
