Added reset password functionality

--- a/client/public/locales/ar/translation.json
+++ b/client/public/locales/ar/translation.json
@@ -80,6 +80,11 @@
     "signupForm": {
         "title": "أنشئ حسابك",
         "fields": {
+            "email": {
+                "label": "البريد الإلكتروني",
+                "placeholder": "البريد الإلكتروني",
+                "required": "البريد الإلكتروني مطلوب"
+            },
             "username": {
                 "label": "اسم المستخدم",
                 "placeholder": "اسم المستخدم",
@@ -118,6 +123,36 @@
         "submitButton": "إنشاء الحساب",
         "successMessage": "تم إنشاء الحساب بنجاح",
         "errorMessage": "خطأ في إنشاء الحساب"
+    },
+    "sendPasswordReset": {
+        "title":"إعادة تعيين كلمة المرور",
+        "fields": {
+            "email": {
+                "label": "البريد الإلكتروني",
+                "placeholder": "البريد الإلكتروني",
+                "required": "البريد الإلكتروني مطلوب"
+            }
+        },
+        "submitButton": "إرسال",
+        "successMessage": "تم إرسال بريد إعادة تعيين كلمة المرور!",
+        "errorMessage": "حدث خطأ أثناء إرسال بريد إعادة التعيين!"
+    },
+    "changePassword": {
+        "title": "أدخل كلمة المرور الجديدة",
+        "fields": {
+            "password": {
+                "label": "كلمة المرور",
+                "placeholder": "كلمة المرور",
+                "required": "كلمة المرور مطلوبة",
+                "uppercase": "يجب أن تحتوي كلمة المرور على حرف كبير واحد على الأقل",
+                "lowercase": "يجب أن تحتوي كلمة المرور على حرف صغير واحد على الأقل",
+                "number": "يجب أن تحتوي كلمة المرور على رقم واحد على الأقل",
+                "symbol": "يجب أن تحتوي كلمة المرور على رمز واحد على الأقل"
+            }
+        },
+        "submitButton": "تأكيد",
+        "successMessage": "تم تغيير كلمة المرور!",
+        "errorMessage": "حدث خطأ أثناء إعادة تعيين كلمة المرور!"
     },
     "loginForm": {
         "title": "تسجيل الدخول إلى Homease",
